# openmp-pixelmatch

./: CMakeLists.txt  readme.md
benchmark/: benchmark1.cpp  benchmark2.cpp
